# rte-france-rs

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: publish.yml
examples/: consumption.rs  generation.rs  static.rs  token.rs
src/: lib.rs
src/api/: consumption.rs  generation.rs  mod.rs
