[package]
name = "rte-france"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client for France's RTE API"
documentation = "https://docs.rs/rte-france"
homepage = "https://github.com/Frankkkkk/rte-france-rs"
repository = "https://github.com/Frankkkkk/rte-france-rs"
keywords = ["RTE", "TSO", "RTE-France"]
categories = ["api-bindings"]



[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
oauth2 = "4.4.2"
polars = { version = "0.43.1", features = ["timezones"] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = "1.0.213"
serde_json = "1.0.132"
